k8s-kustomize/overlays/production/green/image-and-label-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-converter
spec:
  template:
    metadata:
      labels:
        version: green # <-- CHANGE HERE: This pod is now 'green'
    spec:
      containers:
      - name: currency-converter
        # <-- CHANGE HERE: Point to your new v2 image [This v2 image was created and pushed to the ECR with tag v2, v1 also exists that is needed for the Blue Deployment]
        image: 538153606685.dkr.ecr.us-east-1.amazonaws.com/currency_converter:v2
