k8s-kustomize/overlays/production/green/service-selector-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-converter-service
spec:
  selector:
    app: currency-converter
    version: green # <-- CHANGE HERE: Directs all traffic to 'green' pods
